// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`footnote.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
^[inline]

=====================================output=====================================
^[inline]

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
[^alpha bravo]

=====================================output=====================================
[^alpha bravo]

================================================================================
`;
